Prevent about page from being too wide on wide screens

--- a/app/main/about/about.sass
+++ b/app/main/about/about.sass
@@ -41,11 +41,13 @@
 
 .info
   width: 75%
+  max-width: 36em
   position: relative
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
 
+  font-size: calc(13px + .75vw)
   color: $white
 
   .border
@@ -89,7 +91,6 @@
   .content-back
     width: 100%
     padding: 3em
-    font-size: calc(13px + .75vw)
     line-height: 1.5em
     transition: transform .75s
     backface-visibility: hidden
